@@ -3,6 +3,8 @@ Release v1.3.3
     - Added choice autocompletion (press tab with an incomplete choice in the input area)
   - General Fixes:
     - Accepts input even if input field is empty (waste of processing power)
+  - General:
+    - Achievements were not correctly loaded from files (meaning they were not kept when saved)
   - Vanilla TextFighter:
     - Fixes:
       - Rewards are not given when killing the lumberjack
